--- a/docs/.vitepress/theme/styles/vars.css
+++ b/docs/.vitepress/theme/styles/vars.css
@@ -43,7 +43,7 @@
   --vp-home-hero-image-background-image: linear-gradient(
     -45deg,
     #bd34fe 50%,
-    #47caff 50%
+    #4c09b9 50%
   );
   --vp-home-hero-image-filter: blur(40px);
 }
