--- a/docs/.vitepress/theme/styles/vars.scss
+++ b/docs/.vitepress/theme/styles/vars.scss
@@ -34,19 +34,20 @@
 
 :root {
   --vp-home-hero-name-color: transparent;
-  --vp-home-hero-name-background: -webkit-linear-gradient(
-    120deg,
-    #bd34fe 30%,
-    #41d1ff
-  );
+  --vp-home-hero-name-background: -webkit-linear-gradient(120deg,
+      #bd34fe 30%,
+      #41d1ff);
 
-  --vp-home-hero-image-background-image: linear-gradient(
-    -45deg,
-    #bd34fe 50%,
-    #4c09b9 50%
-  );
+  --vp-home-hero-image-background-image: linear-gradient(-45deg,
+      #bd34fe 50%,
+      #4c09b9 50%);
   --vp-home-hero-image-filter: blur(40px);
 }
+
+.main {
+  margin-top: 40px;
+}
+
 
 @media (min-width: 640px) {
   :root {
@@ -58,4 +59,14 @@
   :root {
     --vp-home-hero-image-filter: blur(72px);
   }
+  .main {
+    margin-top: 0px;
+  }
 }
+
+@media (max-width: 960px) {
+  .image{
+    margin-top: -50px !important;
+  }
+}
+
