--- a/docs/.vitepress/theme/styles/style.scss
+++ b/docs/.vitepress/theme/styles/style.scss
@@ -4,14 +4,26 @@
 
 #app .VPHomeHero {
     margin-top: 0px;
-    margin-bottom: 40px;
+    margin-bottom: 55px;
 
     .main {
-        margin-top: -45px;
+        margin-top: -5px;
     }
 }
 
 #app .VPNavBarTitle {}
+
+.font-icon{
+    padding: 2px 8px;
+    border-radius: 4px;
+
+    display: inline-block;
+    background-color: var(--vp-c-gray-light-4);
+}
+
+.dark .font-icon{
+    background-color: var(--vp-c-bg);
+}
 
 @media (max-width: 960px) {
     #app .image {
