--- a/docs/.vitepress/theme/styles/style.scss
+++ b/docs/.vitepress/theme/styles/style.scss
@@ -3,11 +3,11 @@
 }
 
 #app .VPHomeHero {
-    margin-top: 0px;
-    margin-bottom: 55px;
+    margin-top: 20px;
+    margin-bottom: 35px;
 
     .main {
-        margin-top: -5px;
+        margin-top: -40px;
     }
 }
 
@@ -39,4 +39,6 @@
     }
 }
 
-@media (min-width: 960px) {}
+@media (min-width: 960px) {
+   
+}
