--- a/docs/.vitepress/theme/styles/vars.scss
+++ b/docs/.vitepress/theme/styles/vars.scss
@@ -8,16 +8,17 @@
 }
 
 :root {
-  --vp-c-brand: #646cff;
-  --vp-c-brand-light: #747bff;
+  --vp-c-brand: #b575e3;
+  --vp-c-brand-light:#c880f9 ;
   --vp-c-brand-lighter: #9499ff;
   --vp-c-brand-lightest: #bcc0ff;
-  --vp-c-brand-dark: #535bf2;
-  --vp-c-brand-darker: #454ce1;
+  --vp-c-brand-dark: #c880f9;
+  --vp-c-brand-darker: #945fb9;
   --vp-c-brand-dimm: rgba(100, 108, 255, 0.08);
 
   --vp-nav-height-mobile: 56px;
   --vp-nav-height-desktop: 65px;
+
 }
 
 /**
