docs：add content

--- a/docs/.vitepress/theme/styles/style.scss
+++ b/docs/.vitepress/theme/styles/style.scss
@@ -25,6 +25,12 @@
     background-color: var(--vp-c-bg);
 }
 
+
+p img{
+    margin-top: 2px;
+    border-radius: 2px;
+}
+
 @media (max-width: 960px) {
     #app .image {
         margin-top: -75px;
