--- a/docs/.vitepress/theme/styles/vars.scss
+++ b/docs/.vitepress/theme/styles/vars.scss
@@ -9,7 +9,7 @@
 
 :root {
   --vp-c-brand: #b575e3;
-  --vp-c-brand-light:#c880f9 ;
+  --vp-c-brand-light: #c880f9;
   --vp-c-brand-lighter: #9499ff;
   --vp-c-brand-lightest: #bcc0ff;
   --vp-c-brand-dark: #c880f9;
@@ -18,7 +18,7 @@
 
   --vp-nav-height-mobile: 56px;
   --vp-nav-height-desktop: 65px;
-
+  --vp-home-hero-name-background: -webkit-linear-gradient(120deg, #bd34fe 30%, #41d1ff);
 }
 
 /**
